# my_rm

./: CMakeLists.txt  README.md  package.xml
armor1_pose_solver/: armor_detect_node.py  package.xml  setup.cfg  setup.py
armor1_pose_solver/armor1_pose_solver/: armor_detect_node.py
armor1_pose_solver/config/: armor_params.yaml
armor_interfaces/: CMakeLists.txt  package.xml
armor_interfaces/msg/: ArmorShoot.msg
armor_pose_solver/: CMakeLists.txt  package.xml
armor_pose_solver/config/: calib_result.yml  config.yaml  data.yaml
armor_pose_solver/include/: Kalman.hpp  Struct.hpp  Yolo.hpp  config.hpp
armor_pose_solver/src/: Armors.cpp  PoseSolve.cpp  Yolo.cpp
config/: armor_params.yaml  calib_result.yml  labels.txt
hik_camera/config/: camera_info.yaml  camera_params.yaml
include/: Config.hpp  Draw.hpp  DrawTrack.hpp  ExtendedKalman.hpp  Kalman.hpp  Plotter.hpp  PoseSolve.hpp  Serial.hpp  Struct.hpp  Yolo.hpp
src/: Armors.cpp  Draw.cpp  DrawTrack.cpp  DrawTrack4points.cpp  ExtendedKalman.cpp  Kalman.cpp  Main.cpp  Plotter.cpp  PoseSolve.cpp  Serial.cpp  Yolo.cpp  config.cpp
train4/: args.yaml  results.csv
train6/: args.yaml  results.csv
