<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_old</name>
  <version>0.0.0</version>
  <description>Armor detector package</description>
  <maintainer email="hh@todo.todo">hh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>armor_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
