<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor1_pose_solver</name>
  <version>0.0.0</version>
  <description>Python armor detect and pose solve node</description>
  <maintainer email="hh@example.com">hh</maintainer>
  <license>Apache-2.0</license>

  <!-- 核心运行依赖 -->
  <depend>rclpy</depend>
  <depend>ultralytics</depend>
  <depend>opencv-python</depend>
  <depend>numpy</depend>
  <depend>pyyaml</depend>
  <depend>vision_msgs</depend>
  
  <!-- C++ msg包armor_interfaces的依赖，明确msg接口 -->
  <!-- <exec_depend>armor_interfaces</exec_depend> -->

  <!-- 测试依赖 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Python包基础编译依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>colcon-core</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

